                - creme.ajax.params() is deprecated; Use _.encodeURLSearch() instead
                - creme.ajax.decodeSearchData() is deprecated; Use _.decodeURLSearchData() instead
                - creme.utils.confirmSubmit() is deprecated; Use the new 'creme_core-hatmenubar-update-redirect' or 'delete' actions instead.
        # In 'creme_core.models' :
            - The models 'CremeUser' gets a new method 'has_perm_or_die()' which raises exceptions with friendly error messages.
            - The model 'FileRef' gets a new optional field "description";
              it's used by the new view which displays all FileRefs (so feel free to fill it).
        # Apps :
            * Persons :
                - The model 'Address' gets new semantic fields (like ZipCodeField) which allow to
                  easily customise things (like the form field, the field printer etc...).
            * Activities:
                - New FullCalendarBrick base class for implementation of calendar bricks.
                - Refactor of creme.ActivityCalendar :
                    - Add headlessMode flag.
                    - Add allowEventOverlaps property (boolean or method).
                    - Add allowEventCreate property (boolean).
        # Javascript:
            * Add RelativeURL() class as an alternative of URL() that do not accepts relative paths (e.g '/list?page=1' is not a valid URL)
            * FormDialog:
                - Form submit error responses with HTML can either replace the default overlay content or the frame content.
                - New creme.dialog.Frame option 'fillOnError'; if enabled the html error response replaces the content.
                - New creme.dialog.Dialog option 'fillFrameOnError'; if enabled the html error response replaces the content.
            * PopoverAction:
                - Now accept <script type="*/html"> or dom queries for the content for popovers : allows usage of links.