@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2017-2024  Hybird
+#    Copyright (C) 2017-2025  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -65,6 +65,8 @@ class ConfigExport(generic.CheckedView):
         # 2.7: 1.6
         #    - The cells for RelationBrickItem are now stored as a dictionary.
         #    - Fields "role" & "superuser" for ButtonMenuItem.
+        #    - Users are referenced by their UUID for HeaderFilter & EntityFilter
+        #      (instead of 'username').
         info[ID_VERSION] = '1.6'
         info.update((e_id, exporter()) for e_id, exporter in self.registry)
 
